tests/baselines/reference/chainedCallsWithTypeParameterConstrainedToOtherTypeParameter(strict=true).errors.txt
chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.ts(4,9): error TS2322: Type 'null' is not assignable to type 'Chain<S>'.
chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.ts(9,5): error TS7008: Member 'x' implicitly has an 'any' type.
chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.ts(12,5): error TS7008: Member 'y' implicitly has an 'any' type.
chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.ts(15,5): error TS7008: Member 'z' implicitly has an 'any' type.
chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.ts(19,64): error TS2741: Property 'z' is missing in type 'B' but required in type 'C'.
chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.ts(19,81): error TS2739: Type 'A' is missing the following properties from type 'C': z, y


==== chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.ts (6 errors) ====
    class Chain<T extends A> {
        constructor(public value: T) { }
        then<S extends T>(cb: (x: T) => S): Chain<S> {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'Chain<S>'.
        }
    }
    
    class A {
        x;
        ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
    }
    class B extends A {
        y;
        ~
!!! error TS7008: Member 'y' implicitly has an 'any' type.
    }
    class C extends B {
        z;
        ~
!!! error TS7008: Member 'z' implicitly has an 'any' type.
    }
    
    // Ok to go down the chain, but error to try to climb back up
    (new Chain(new A)).then(a => new B).then(b => new C).then(c => new B).then(b => new A);
                                                                   ~~~~~
!!! error TS2741: Property 'z' is missing in type 'B' but required in type 'C'.
!!! related TS2728 chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.ts:15:5: 'z' is declared here.
!!! related TS6502 chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.ts:3:27: The expected type comes from the return type of this signature.
                                                                                    ~~~~~
!!! error TS2739: Type 'A' is missing the following properties from type 'C': z, y
!!! related TS6502 chainedCallsWithTypeParameterConstrainedToOtherTypeParameter.ts:3:27: The expected type comes from the return type of this signature.